# vscpl1drv-can4vscp

./: .codacy.yaml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  README.md  VERSION.m4  aclocal.m4  build_debian_package.sh  clean_for_dist  config.h  config.h.in  config.status  configure  configure.ac  update_common_files.sh
.codacy/: codacy.yaml
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  codacy-analysis.yml
_vscp_common_general/: README.md
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
autotools/: install-sh  missing
common/: can4vscpobj.cpp  can4vscpobj.h  dlldrvobj.h
debian_orig/: README.Debian  README.source  changelog  control  copyright  folders  install  links  manpages  rules  shlibs
debug/: conf_standard.xml
debug/linux/: vscpd.xml
helpers/python/: README.md  commandClose.py  commandNoop.py  commandSetVerboseMode.py  receive.py
linux/: Makefile  Makefile.in  README.md  test  test.cpp  vscpl1drv-can4vscp.cpp  vscpl1drv-can4vscp.h  vscpl1drv-can4vscp.so.1.1.0
linux/nbproject/: configurations.xml  project.xml
linux/nbproject/private/: Default.properties  configurations.xml
m4/: Makefile  Makefile.am  Makefile.in  ax_check_enable_debug.m4  ax_check_openssl.m4  codeset.m4  gettext.m4  glibc21.m4  iconv.m4  intdiv0.m4  inttypes-pri.m4  inttypes.m4  inttypes_h.m4  isc-posix.m4  lcmessage.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  progtest.m4  stdint_h.m4  uintmax_t.m4  ulonglong.m4
man/: make_man_pages  vscpl1drv-can4vscp.1  vscpl1drv-can4vscp.1.md
src/common/: can4vscpobj.cpp  can4vscpobj.h  com-win32.h  com_win32.h  dlldrvobj.cpp  dlldrvobj.h
src/compat/linux/: can.h
src/linux/: README.md  test.cpp  vscpl1drv-can4vscp.cpp  vscpl1drv-can4vscp.h
src/windows/: can4vscpdrv.cpp  can4vscpdrv.dsp  can4vscpdrv.mak  can4vscpdrv.vcproj  can4vscpdrv.vcxproj
